# gestures

./: CMakeLists.txt  CONTRIBUTING.md  README.md  gestures.cfg  main  main.cpp
app/: CMakeLists.txt  gestures.cpp
include/: EventHandler.h  EventSource.h  Finger.h  Gesture.h  GestureEmitter.h  MT_EventSource.h  ThreadsafeQueue.h  TouchpadInputEventSource.h
include/enums/: GestureDirection.h  GesturePosition.h  Phase.h
src/: CMakeLists.txt  Config.cpp  Config.h  EventHandler.cpp  EventHandler.h  EventSource.h  Finger.cpp  Finger.h  Gesture.cpp  Gesture.h  GestureDirection.cpp  GestureEmitter.cpp  GestureEmitter.h  GesturePosition.cpp  GestureType.cpp  MT_EventSource.cpp  Phase.cpp  TouchpadInputEventSource.cpp  TouchpadInputEventSource.h  main.cpp
src/enums/: GestureDirection.h  GesturePosition.h  GestureType.h  Phase.h
test/: CMakeLists.txt  MT_EventSourceTest.cpp  ThreadsafeQueueTest.cpp  TouchpadInputEventSourceTest.cpp  testgtest.cpp
